# MentorHub

./: .amvera.yml  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  BACKUP_CRON.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT-PRODUCTION.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  FEATURES.md  FINAL_TEST_RESULTS.md  FRONTEND_CREATED.md  FRONTEND_SUMMARY.md  GIT-GUIDE.md  IMPROVEMENTS.md  LICENCE  LICENCE4  LICENSE  LICENSE_RU  MONITORING.md  Makefile  NEW_FEATURES.md  PERFORMANCE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_STATUS.md  QWEN.md  README-note.md  README.md  SECURITY_IMPLEMENTATION_REPORT.md  STARTUP_GUIDE.md  TESTING_COMPLETE.md  TEST_RESULTS.md  TODO.md  (+29 more)
backend/: .coveragerc  .env.example  Dockerfile  Dockerfile.backend  Dockerfile.dev  NOTES.md  OPENAPI_GUIDE.md  PAYMENTS_API.md  SBP_API.md  SERVICES.md  backup_database.py  check_db.py  check_env.py  cleanup.py  create_tables.py  docker-entrypoint.sh  mentorhub.db-shm  mentorhub.db-wal  postman_collection.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  test.db-shm  test.db-wal  test_api.py  test_bcrypt.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  2927c32a42be_add_mentor_session_message_and_payment_.py  313e11c98a64_merge_heads.py  4a3b2c1d5e6f_create_reviews_table.py  a1b2c3d4e5f6_add_oauth_fields_to_user.py  a1b2c3d4e5f7_add_additional_performance_indexes.py  a1b2c3d4e5f8_add_subscriptions_table.py  a1b2c3d4e5f9_security_performance_constraints.py  a1b2c3d4e5fa_add_composite_indexes.py  aa773f10e0d2_add_mentor_session_message_and_payment_.py  b1f3d5c6a7e8_add_progress_table.py  b2c3d4e5f6g7_add_2fa_fields_to_user.py  calendar_001.py  chat_rooms_001.py  d123456789ab_add_course_models.py  e4f5g6h7i8j9_add_performance_indexes_on_frequently_used_columns.py  f5a6b7c8d9e0_add_composite_indexes_for_common_queries.py  video_calls_001.py  z999_merge_all_heads.py
backend/app/: config.py  config_prod.py  constants.py  database.py  dependencies.py  lifespan.py  main.py
backend/app/api/: __init__.py  achievements.py  admin.py  analytics.py  auth.py  auth_core.py  auth_oauth.py  backups.py  calendar.py  chat_rooms.py  courses.py  courses_crud.py  courses_enrollments.py  courses_lessons.py  export.py  (+30 more)
backend/backups/: backup_metadata.json
backend/docs/: SERVICES.md
backend/requirements/: README.md  requirements-base.txt  requirements-cloud.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/scripts/: backup.sh  create_admin.py  create_indexes.sql  restore.sh  seed_data.py
backend/tests/: README.md  conftest.py  test_achievements.py  test_agora_service.py  test_alembic_migrations.py  test_analytics.py  test_auth.py  test_backups.py  test_cache.py  test_chat_rooms.py  test_courses.py  test_e2e.py  test_email_notifications.py  test_email_verification.py  test_errors.py  test_export.py  test_export_extended.py  test_health.py  test_integration.py  test_lesson_completion.py  test_mentors.py  test_mentors_search.py  test_messages.py  test_notifications.py  test_payments.py  test_progress.py  test_push_notifications.py  test_recommendations.py  test_retry_utilities.py  test_reviews.py  test_security.py  test_sessions.py  test_stats.py  test_two_factor.py  test_users.py  test_video_calls.py  test_webhook_rate_limit.py  test_websocket_chat.py
(+498 files in other folders)
