[project]
name = "mentorhub-backend"
version = "1.0.0"
description = "MentorHub backend API"
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/alembic/*"]

[tool.mypy]
python_version = "3.10"
warn_no_return = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.*", "backup_database"]
disable_error_code = ["assignment", "arg-type", "return-value", "call-overload", "var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "websocket: marks tests as websocket tests",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=75",
]
filterwarnings = [
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "alembic"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "SIM",  # code simplification
    "PERF",  # performance
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S104",  # possible binding to all interfaces — intentional for dev
    "S105",  # possible hardcoded password — false positives for URLs/constants
    "S106",  # possible hardcoded password assigned to argument — token_type, not a password
    "S107",  # possible hardcoded password default — token_type param default
    "PERF203",  # try-except within a loop — intentional in retry/send patterns
    "PERF401",  # use list comprehension — complex dict-building is more readable as loops
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501", "E402"]
"scripts/*" = ["E402"]
